--- a/css/style.scss
+++ b/css/style.scss
@@ -21,21 +21,26 @@ h2{
 	font-weight: bold;
 }
 .testimonials{
+	
+	padding: 25px 0px;
+	.testimonials__slider{
+		position: relative;
+		padding-top: 20px;
+	}
 	.owl-controls{
 		display: block;
 		width: 250px;
 		margin: 0 auto;
-		outline: 1px solid blue;
-		position: relative;
+		position: absolute;
+		left: 50%;
+		transform: translate(-50%, 0);
+		top: 50px;
+		z-index: 400;
+		display: none;
 	}
 	.owl-dots{
 		display: block;
 		margin: 0 auto;
-		outline: 1px solid red;
-
-		//width: 80%;
-		//margin: 0 auto;
-
 		.owl-dot{
 			display: inline-block;
 			margin-right: 15px;
@@ -51,8 +56,6 @@ h2{
 					margin-top: 4px;
 				}
 			}
-			
-
 		}
 		.owl-dot > span{
 			display: inline-block;
@@ -75,10 +78,6 @@ h2{
 		}
 	}
 	.item{
-		
-
-
-		
 		img{
 			display: inline-block;
 			width: unset;
@@ -100,7 +99,8 @@ h2{
 	font-family: "MuseoSansCyrl500";
 	font-size: 20px;
 	font-weight: bold;
-	margin-bottom: 25px;
+	margin-bottom: 10px;
+	margin-top: 25px;
 }
 .soc-link{
 	color: #1b8bcb;
@@ -111,6 +111,18 @@ h2{
 	background: #fdfdfd;
 	padding: 30px;
 	box-sizing: border-box;	
+	position: relative;
+}
+.testimonials__right:before{
+	position: absolute;
+	content: "";
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 37px 40px 37px 0;
+	border-color: transparent #fdfdfd transparent;
+	left: -40px;
+	top: 75px;
 }
 .testimonials__right-title{
 	display: block;
@@ -134,17 +146,20 @@ h2{
 	position: absolute;
 	width: 25px;
 	height: 25px;
-	
 	margin-top: 5px;
-
 }
+
 .testimonials-left{
-	left: 0px;
+	left: -50px;
 	margin-right: 35px;
+	z-index: 500;
+	top: -5px;
 }
 
 .testimonials-right{
-	right: 0px;
+	right: -20px;
+	top: -5px;
+	z-index: 500;
 }
 
 @media only screen and (min-width : 320px) {
@@ -160,9 +175,21 @@ h2{
 	h2{
 		font-size: 34px !important;
 	}
+	.testimonials{
+		padding: 70px 0px;
+	}
+	.testimonials__slider{
+		position: relative;
+		padding-top: 140px !important;
+		.owl-controls{
+			display: block;
+		}
+	}
 	.testimonials__left{
 		float: left;
-		width: 20%;
+		width: 22%;
+		padding-left: 10px;
+		box-sizing: border-box;
 
 	}
 	.testimonials__right{
