--- a/css/style3.scss
+++ b/css/style3.scss
@@ -42,6 +42,7 @@
 
 .dc-price {
 	margin-top: 50px;
+	margin-bottom: 50px;
     width: 685px;
 
 	color: #383838;
@@ -51,9 +52,8 @@
 
 	font-size: 34px;
     font-weight: 800;
-    line-height: 16px;    
+    line-height: 16px; 
 }
-
 
 .dc-address {
 	width: 685px;
@@ -136,7 +136,17 @@
     }
 
     .dc-price_table {
-        margin: 0 auto;	
+        margin: 50px 50px 50px 50px auto;	
+        td {
+        	padding: 10px 10px 10px 10px;
+        }        
+    }
+
+    .dc-price_table_group {
+        margin: 50px 50px 50px 50px auto;	
+        td {
+        	padding: 10px 10px 10px 10px;
+        }        
     }
 
     #dc-my_small_table {
@@ -158,6 +168,23 @@
 		text-align: center;
 		margin: 0 auto;
 		font-family: "lato-heavy";
+		margin-top: 100px;
+		margin-bottom: 50px;		
+		h3{
+			font-size: 24px;
+			color:#383838;
+			text-transform: uppercase;
+			text-align: center;	
+			margin: 225px 0 25px 0;	
+			font-family: "lato-heavy";
+		}
+	}
+
+	.dc-how {
+		text-align: center;
+		margin: 0 auto;
+		font-family: "lato-heavy";
+        margin-bottom: 50px;		
 		h3{
 			font-size: 24px;
 			color:#383838;
@@ -187,7 +214,14 @@
 		background-image: url("../img/dc-table-background.jpg");
         background-repeat: no-repeat;
         padding-left: 2%;
-        padding-right: 2%;        
+        padding-right: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;        
+	}
+
+	#dc-course_price {
+		padding: 50px 0 50px 0;
+		padding-bottom: 50px;
 	}
 
 	.borderless td, .borderless th {
@@ -209,6 +243,7 @@
         margin: 0 auto;
         width: 100%;
         padding-bottom: 100px;
+        margin-top: 100px;
     }
 
     .dc-want {
@@ -259,6 +294,7 @@
 		line-height: 41px;
     }
 
+
 @media only screen and (min-width : 320px) {
 }
 
@@ -272,12 +308,29 @@
 		text-align: center;
 		margin: 0 auto;
 		font-family: "lato-heavy";
+		margin-top: 100px;
+		margin-bottom: 50px;
 		h3{
 			font-size: 34px;
 			color:#383838;
 			text-transform: uppercase;
 			text-align: center;	
 			margin: 25px 0 25px 0;	
+			font-family: "lato-heavy";
+		}
+    }    
+
+	.dc-how {
+		text-align: center;
+		margin: 0 auto;
+		font-family: "lato-heavy";
+        margin-bottom: 50px;		
+		h3{
+			font-size: 34px;
+			color:#383838;
+			text-transform: uppercase;
+			text-align: center;	
+			margin: 125px 0 25px 0;	
 			font-family: "lato-heavy";
 		}
     }    
@@ -302,6 +355,13 @@
         background-repeat: no-repeat;
         padding-left: 2%;
         padding-right: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+	}
+
+	#dc-course_price {
+		padding: 50px 0 50px 0;
+		padding-bottom: 50px;
 	}
 
 	.borderless td, .borderless th {
@@ -323,6 +383,7 @@
         margin: 0 auto;
         width: 100%;
         padding-bottom: 100px;
+        margin-top: 100px;
     }
 }
 
@@ -382,9 +443,19 @@
     }
 
     .dc-price_table {
-        margin: 0 auto;
+        margin: 50px 50px 50px 50 auto;	
         max-width: 1170px;
         table-layout: fixed;
+        td {
+        	padding: 10px 10px 10px 10px;
+        }
+    }
+
+    .dc-price_table_group {
+        margin: 50px 50px 50px 50px auto;	
+        td {
+        	padding: 10px 10px 10px 10px;
+        }        
     }
 
     #dc-price-tables {
@@ -392,6 +463,8 @@
         max-width: 1170px; 
         padding-left: 2%;
         padding-right: 2%;        
+        padding-top: 2%;
+        padding-bottom: 2%;        
         h4 {
             font-family: Lato;
 			font-size: 32px;
@@ -400,6 +473,11 @@
 			font-variant: small-caps;
         }   	
     }
+
+	#dc-course_price {
+		padding: 50px 0 50px 0;
+		padding-bottom: 50px;
+	}
 
     td, th {
         width: 3%;        
@@ -415,12 +493,29 @@
 		text-align: center;
 		margin: 0 auto;
 		font-family: "lato-heavy";
+		margin-top: 100px;		
+		margin-bottom: 50px;		
 		h3{
 			font-size: 34px;
 			color:#383838;
 			text-transform: uppercase;
 			text-align: center;	
 			margin: 25px 0 25px 0;	
+			font-family: "lato-heavy";
+		}
+	}
+
+    .dc-how {
+		text-align: center;
+		margin: 0 auto;
+		font-family: "lato-heavy";
+        margin-bottom: 50px;		
+		h3{
+			font-size: 34px;
+			color:#383838;
+			text-transform: uppercase;
+			text-align: center;	
+			margin: 125px 0 25px 0;	
 			font-family: "lato-heavy";
 		}
 	}
@@ -445,6 +540,11 @@
         background-repeat: no-repeat;
 	}
 
+	#dc-course_price {
+		padding: 50px 0 50px 0;
+		padding-bottom: 50px;
+	}
+
 	.borderless td, .borderless th {
         border: none;
     }
@@ -464,6 +564,7 @@
         width: 100%;
         background-size: cover;
         padding-bottom: 100px;
+        margin-top: 100px;        
     }
 
     .dc-container {
@@ -487,6 +588,9 @@
     	width:100%;
     	height:100%;
     }
+
+
+    .dc-box div img:hover {cursor: url("../img/zoom_in.cur")}
 }
 
 @media only screen and (min-width : 1248px) {
