--- a/css/style3.scss
+++ b/css/style3.scss
@@ -302,6 +302,29 @@
 		line-height: 41px;
     }
 
+    .dc-container {
+    	overflow:hidden;
+    	width:98%;
+    }
+    
+    .dc-box {
+    	white-space:nowrap
+    }
+    
+    .dc-box div {
+    	width:10.57%;
+    	height:6.2%;
+    	display:inline-block;
+    	border:1px solid white
+    }
+
+    .dc-box div img {
+    	display:inline-block;
+    	width:100%;
+    	height:100%;
+    }
+
+    .dc-box div img:hover {cursor: url("../img/zoom_in.cur")}
 
 @media only screen and (min-width : 320px) {
 }
@@ -393,6 +416,30 @@
         padding-bottom: 100px;
         margin-top: 100px;
     }
+
+    .dc-container {
+    	overflow:hidden;
+    	width:98%;
+    }
+    
+    .dc-box {
+    	white-space:nowrap
+    }
+    
+    .dc-box div {
+    	width:10.57%;
+    	height:6.2%;
+    	display:inline-block;
+    	border:1px solid white
+    }
+
+    .dc-box div img {
+    	display:inline-block;
+    	width:100%;
+    	height:100%;
+    }
+
+    .dc-box div img:hover {cursor: url("../img/zoom_in.cur")}    
 }
 
 @media only screen and (min-width : 992px) {
@@ -602,7 +649,6 @@
     	width:100%;
     	height:100%;
     }
-
 
     .dc-box div img:hover {cursor: url("../img/zoom_in.cur")}
 }
