--- a/css/style5.scss
+++ b/css/style5.scss
@@ -5,8 +5,9 @@
 //===napravlenia
 .my-container{
 	max-width: 1190px !important;
-	width: 100%;	
-	margin: 0 auto;
+	// width: 100%;	
+	width: auto;
+	margin: 0 auto;	
 }
 
 .df-napravlenia{
@@ -168,17 +169,9 @@
 	background: url("../img/df-left.png") no-repeat center;
 	background-color: #5e9ef7;
 }
-// .df-slider{
-// 	max-width: 620px;	
-// 	margin: 0 auto;
-// 	img{
-// 			width: 100%;
-// 			height: auto;
-// 		}
-// }
-.df-img-slider{
 
-}
+
+
 
 .df-dating{
 	padding: 65px 0;
@@ -193,11 +186,11 @@
 		margin: 55px 0;	
 		text-align: center;
 	}
+
 	.df-left-box{
 		// float: left;
-		// max-width: 620px;
-		// width: 100%;	
-		display: inline-block;	
+		max-width: 620px;
+		// width: 100%;		
 		margin: 0 auto;
 		text-align: center;
 		.df-img2{
@@ -206,7 +199,7 @@
 			// width: 620px;
 			// height: 570px;
 			text-align: center;
-			overflow: hidden;
+			//overflow: hidden;
 			img{
 				width: 100%;
 				height: auto;
@@ -386,45 +379,8 @@
 }
 
 @media only screen and (min-width : 768px) {
-			/*====our-dating=======*/
-// .df-dating{
-// 	padding: 65px 0;
-// 	h3{	
-// 		margin: 55px 0;			
-// 	}
-// 	.df-left-box{
-// 		// float: left;
-// 		// max-width: 460px;
-// 		// width: 100%;		
-// 		.df-img2{			
-// 			// width: 620px;
-// 			// height: 570px;						
-// 		}
 		
-// 	}
-// 	.df-right-box{
-// 		// float:right;		
-// 		// max-width: 415px;
-// 		// width: 100%;	
-// 		// max-width: unset;
 
-// 		// width: 415px;	
-// 		.df-span{			
-// 			padding: 15px 10px;			
-// 		}
-// 		.df-ulli{			
-// 			padding-left: 20px;			
-// 		}		
-// 	}
-// 	.df-left-float{
-// 		// float: left;
-// 		// display: block;
-// 		// max-width: 460px;
-// 		// width: 100%;
-// 		margin: 0 auto;
-// 		text-align: center;		
-// 	}
-// }
 
 }
 
