--- a/css/style3.scss
+++ b/css/style3.scss
@@ -18,7 +18,7 @@
     width: 685px;
 
 	color: #383838;
-	font-family: Lato;
+	font-family: "lato-heavy";
 	font-weight: 800;
 	text-transform: uppercase;
 
@@ -31,7 +31,7 @@
     width: 685px;
 
 	color: #383838;
-	font-family: Lato;
+	font-family: "lato-heavy";
 	font-weight: 800;
 	text-transform: uppercase;
 
@@ -46,7 +46,7 @@
     width: 685px;
 
 	color: #383838;
-	font-family: Lato;
+	font-family: "lato-heavy";
 	font-weight: 800;
 	text-transform: uppercase;
 
@@ -59,7 +59,7 @@
 	width: 685px;
 
 	color: #383838;
-	font-family: Lato;
+	font-family: "lato-heavy";
 	font-weight: 800;
 	text-transform: uppercase;
 
@@ -74,7 +74,7 @@
 		text-transform: uppercase;
 		text-align: center;	
 		margin: 25px 0 25px 0;	
-		font-family: "lato-heavy";
+		font-family: ""lato-heavy"-heavy";
 	}
 }
 
@@ -175,7 +175,7 @@
 	.dc-schedule {
 		text-align: center;
 		margin: 0 auto;
-		font-family: "lato-heavy";
+		font-family: ""lato-heavy"-heavy";
 		margin-top: 100px;
 		margin-bottom: 50px;		
 		h3{
@@ -184,14 +184,14 @@
 			text-transform: uppercase;
 			text-align: center;	
 			margin: 225px 0 25px 0;	
-			font-family: "lato-heavy";
+			font-family: ""lato-heavy"-heavy";
 		}
 	}
 
 	.dc-how {
 		text-align: center;
 		margin: 0 auto;
-		font-family: "lato-heavy";
+		font-family: ""lato-heavy"-heavy";
         margin-bottom: 50px;		
 		h3{
 			font-size: 24px;
@@ -199,7 +199,7 @@
 			text-transform: uppercase;
 			text-align: center;	
 			margin: 225px 0 25px 0;	
-			font-family: "lato-heavy";
+			font-family: ""lato-heavy"-heavy";
 		}
 	}
 
@@ -211,7 +211,7 @@
     }
 
     .dc-table_text {
-	    font-family: Lato;
+	    font-family: "lato-heavy";
 	    font-size: 10px;
 		font-weight: 800;
 		line-height: 26px;
@@ -257,7 +257,7 @@
     .dc-want {
         padding-top: 70px;
         b {        
-	        font-family: Lato;
+	        font-family: "lato-heavy";
 			font-size: 34px;
 			font-weight: 800;
 			line-height: 26px;
@@ -283,7 +283,7 @@
     }
 
     .dc-free-lesson {
-		font-family: Lato;
+		font-family: "lato-heavy";
 		font-size: 28px;
 		font-weight: 800;
 		line-height: 41px;
@@ -338,7 +338,7 @@
 	.dc-schedule {
 		text-align: center;
 		margin: 0 auto;
-		font-family: "lato-heavy";
+		font-family: ""lato-heavy"-heavy";
 		margin-top: 100px;
 		margin-bottom: 50px;
 		h3{
@@ -347,14 +347,14 @@
 			text-transform: uppercase;
 			text-align: center;	
 			margin: 25px 0 25px 0;	
-			font-family: "lato-heavy";
+			font-family: ""lato-heavy"-heavy";
 		}
     }    
 
 	.dc-how {
 		text-align: center;
 		margin: 0 auto;
-		font-family: "lato-heavy";
+		font-family: ""lato-heavy"-heavy";
         margin-bottom: 50px;		
 		h3{
 			font-size: 34px;
@@ -362,7 +362,7 @@
 			text-transform: uppercase;
 			text-align: center;	
 			margin: 125px 0 25px 0;	
-			font-family: "lato-heavy";
+			font-family: ""lato-heavy"-heavy";
 		}
     }    
 
@@ -374,7 +374,7 @@
     }
 
     .dc-table_text {
-	    font-family: Lato;
+	    font-family: "lato-heavy";
 	    font-size: 24px;
 		font-weight: 800;
 		line-height: 26px;
@@ -527,7 +527,7 @@
         padding-top: 2%;
         padding-bottom: 2%;        
         h4 {
-            font-family: Lato;
+            font-family: "lato-heavy";
 			font-size: 32px;
 			font-weight: 800;
 			line-height: 26px;
@@ -553,7 +553,7 @@
     .dc-schedule {
 		text-align: center;
 		margin: 0 auto;
-		font-family: "lato-heavy";
+		font-family: ""lato-heavy"-heavy";
 		margin-top: 100px;		
 		margin-bottom: 50px;		
 		h3{
@@ -562,14 +562,14 @@
 			text-transform: uppercase;
 			text-align: center;	
 			margin: 25px 0 25px 0;	
-			font-family: "lato-heavy";
+			font-family: ""lato-heavy"-heavy";
 		}
 	}
 
     .dc-how {
 		text-align: center;
 		margin: 0 auto;
-		font-family: "lato-heavy";
+		font-family: ""lato-heavy"-heavy";
         margin-bottom: 50px;		
 		h3{
 			font-size: 34px;
@@ -577,7 +577,7 @@
 			text-transform: uppercase;
 			text-align: center;	
 			margin: 125px 0 25px 0;	
-			font-family: "lato-heavy";
+			font-family: ""lato-heavy"-heavy";
 		}
 	}
 
@@ -589,7 +589,7 @@
     }
 
     .dc-table_text {
-	    font-family: Lato;
+	    font-family: "lato-heavy";
 	    font-size: 24px;
 		font-weight: 800;
 		line-height: 26px;
