--- a/css/style3.scss
+++ b/css/style3.scss
@@ -130,7 +130,7 @@
     	display: none;
     	max-width: 100%;
     	table-layout: fixed;
-    	font-family: MuseoSansCyrl;
+    	font-family: "MuseoSansCyrl1";
         line-height: 25px;
         margin: 0 auto;
     }
@@ -160,7 +160,7 @@
     #dc-my_small_table {
     	display: none;
     	color: #383838;
-        font-family: MuseoSansCyrl;
+        font-family: "MuseoSansCyrl1";
         line-height: 16px;
     }
 
@@ -204,7 +204,7 @@
 	}
 
     .dc-table_header2 {
-    	font-family: MuseoSansCyrl;
+    	font-family: "MuseoSansCyrl1";
         font-size: 10px;
         line-height: 26px;
         font-variant: small-caps;
@@ -273,7 +273,7 @@
 
     .dc-input {
     	background-color: #dff1fe;
-    	font-family: MuseoSansCyrl;
+    	font-family: "MuseoSansCyrl1";
 		font-size: 16px;
 		line-height: 41px;
 		margin: 10px;
@@ -297,7 +297,7 @@
 		height: 50px;
 		margin-top: 30px; 
 		color: #686868;
-		font-family: MuseoSansCyrl;
+		font-family: "MuseoSansCyrl1";
 		font-size: 16px;
 		line-height: 41px;
     }
@@ -367,7 +367,7 @@
     }    
 
     .dc-table_header2 {
-    	font-family: MuseoSansCyrl;
+    	font-family: "MuseoSansCyrl1";
         font-size: 24px;
         line-height: 26px;
         font-variant: small-caps;
@@ -621,7 +621,7 @@
     .dc-questions {
 		background-image: url("../img/want_to_you.jpg");
         background-repeat: no-repeat;
-        height: 291px;
+        height: 311px;
         width: 100%;
         background-size: cover;
         padding-bottom: 100px;
