--- a/css/style5.scss
+++ b/css/style5.scss
@@ -174,32 +174,27 @@
 
 
 .df-dating{
-	padding: 65px 0;
+	padding: 25px 0;
 	text-align: center;
-	margin: 0 auto;
+	margin: 0 auto;	
 	h3{
 		font-size: 34px;
-		color:#383838;
-		line-height: 26px;
+		color:#383838;		
 		text-transform: uppercase;
 		font-family: "lato-heavy";
-		margin: 55px 0;	
+		margin-bottom: 30px;	//55
 		text-align: center;
 	}
-
-	.df-left-box{
-		// float: left;
-		max-width: 620px;
-		// width: 100%;		
+	.df-left-box{	
+		max-width: 620px;		
 		margin: 0 auto;
 		text-align: center;
+		padding: 0 10px;
 		.df-img2{
 			display: none;			
-			margin: 0 auto;
-			// width: 620px;
-			// height: 570px;
+			margin: 0 auto;			
 			text-align: center;
-			//overflow: hidden;
+			overflow: hidden;
 			img{
 				width: 100%;
 				height: auto;
@@ -210,9 +205,9 @@
 			display: none;			
 			div{
 				display: inline-block;
-				width: 75px;
+				width: 73px;
 				height: 75px;
-				margin-right: -3px;
+				// margin-right: -3px;
 				position: relative;
                 z-index: 9;  
 				img{
@@ -244,19 +239,19 @@
             }
 		}
 	}
-	.df-right-box{
-		// float: right;
-		display: inline-block;		
+	.df-right-box{		
+		display:block;		
 		max-width: 555px;
 		width: 100%;
 		text-align: left;
 		margin: 0 auto;
 		.df-span{
-			font-family: "MuseoSansCyrl300";
+			font-family: "MuseoSansCyrl1";
 			color:#fff;
 			font-size: 28px;
 			line-height: 34px;
 			padding: 14px 0px;
+			letter-spacing: 0.3px;
 			text-align: center;
 			display: block;
 			background-image: url("../img/df-bg-span-sm.png");
@@ -265,13 +260,13 @@
 			background-size: cover;
 			margin-top: 10px;
 			span{
-				font-family: "MuseoSansCyrl500";
+				font-family: "MuseoSansCyrl300";
 				display: block;
 			}
 		}
 		.df-ulli{
 			display: inline-block;
-			padding-left: 20px;
+			padding:15px 25px 0 20px;	
 			li{
 				display: block;
 				font-family: "MuseoSansCyrl300";
@@ -300,15 +295,10 @@
 			border-bottom: 1px dashed rgba(0,0,0,0);
 		}
 	}
-	.df-left-float{
-		// float: left;
-		// display: block;
-		// max-width: 620px;
-		// width: 100%;
-		display: inline-block;
+	.df-left-float{		
+		display: block;
 		margin: 0 auto;
-		text-align: center;
-		
+		text-align: center;		
 		h4{
 			font-size: 28px;
 			color:#383838;
@@ -379,60 +369,43 @@
 }
 
 @media only screen and (min-width : 768px) {
-		
-
-
 }
 
 @media only screen and (min-width : 992px) {
-
-
-
 }
 @media only screen and (min-width : 1070px) {
 			/*====our-dating=======*/
-.df-dating{
+	.df-dating{
 	padding: 65px 0px 65px 12px;
 	h3{	
-		margin: 55px 0;			
+		margin-bottom: 45px ;			
 	}
 	.df-left-box{
-		float: left;
-		max-width: 620px;
-		width: 100%;
-		padding-top: 5px;		
-		.df-img2{			
-			width: 611px;
-			height: 576px;
-			img{
-				width: 100%;
-				height: 100%;
-			}						
-		}		
+		float: left;		
+		width: 50%;
+		padding: 5px 0 0 0;	
 	}
 	.df-right-box{
-		float: right;		
-		max-width: 555px;
-		width: 100%;			
+		float: right;				
+		width: 50%;			
 		.df-span{			
 			padding: 15px 10px;	
 			margin-top: 1px;
 			background-image: url("../img/df-bg-span.png");			
 		}
 		.df-ulli{			
-			padding:15px 20px 0 47px;			
+			padding:15px 25px 0 47px;			
 		}		
 	}
 	.df-left-float{
 		float: left;
-		display: block;
-		max-width: 620px;
-		width: 100%;
+		display: block;	
+		width: 50%;
 		margin: 0 auto;
 		text-align: center;
-		padding-top: 20px;		
+		padding-top: 16px;		
 	}
-}
+	}
 }
 @media only screen and (min-width : 1248px) {
 		.df-napravlenia{	
@@ -463,20 +436,38 @@
 		}
 
 			/*====our-dating=======*/
-			// #owl-demo{
-			// 		display: none;
-			// }
+#df-owl-demo{
+	display: none;
+}
 .df-dating{	
 	.df-left-box{
+		max-width: 620px;
+		width: 100%;
+		.df-img2{
+			display: block;	
+			width: 612px;
+			height: 576px;
+			img{
+				width: 100%;
+				height: 100%;
+			}	
+		}			
 		.df-img-little{	
 			margin-top: 2px;
 			display: block;           
 		}
 	}
-	.df-right-box{		
+	.df-right-box{
+		max-width: 555px;
+		width: 100%;				
 		.df-show-all{
 			display: inline-block;
 		}
+	}
+	.df-left-float{		
+		max-width: 570px;
+		width: 100%;
+		padding-left: 60px;
 	}	
 }	
 
