--- a/css/style4.scss
+++ b/css/style4.scss
@@ -5,7 +5,10 @@
 @import "style4.css";
 @import "fonts.css";
 
-
+.my-container2{
+	max-width:1164px;
+	margin: 0 auto;
+}
 
 a:hover{
 	text-decoration:none !important;
@@ -134,6 +137,7 @@ a:hover{
 		}
 		.dd-big-phone{
 			text-align: right;
+			padding-top: 10px;
 			span{
 				font-family: "MuseoSansCyrl500";
 				color:#fff;
@@ -455,6 +459,154 @@ a:hover{
 	width:100%;
 }
 
+/* Наши преподаватели
+=============================*/
+
+.dd-prep-title{
+	text-align:center;
+	padding-top: 58px;
+	padding-bottom: 50px;
+	span{
+		font-family: "lato-heavy";
+		font-size: 24px;
+		// font-size:34px; 
+		text-transform: uppercase;
+		color: #383838;
+	}
+}
+.border-nones{
+	border:none !important;
+}
+.dd-prep-wrap{
+	display:table;
+	.dd-prep{
+		display: table-cell;
+		vertical-align: top;
+		
+		// float:left;
+		.dd-prep-txt{
+			border:1px solid #F3F3F3;
+			max-width: 388px;
+			padding: 20px 25px;
+			// border: 1px solid rgba(0, 0, 0, 0.58);
+			display: none;
+			ul{
+				height: 355px;
+				li{
+					margin-bottom: 24px;
+					span{
+						background:url(../img/dd-galka.png) no-repeat top left;	
+						display: inline-block;	
+						font-family: "MuseoSansCyrl300";
+						color: #4c4c4c;
+						font-size: 18px;
+						padding-left: 35px;
+					}
+				}
+			}
+			.dd-prep-button-wrap{
+				text-align: center;
+				.dd-prep-button{
+					display: inline-block;
+					border-radius: 7px;
+					padding: 12px 56px;
+					background: #FDE841;
+					font-family: "MuseoSansCyrl500";
+					font-size: 18px;
+					color: #383838;
+				}
+			}
+			.dd-button-span{
+				text-align: center;
+				padding-top: 15px;
+				span{
+					font-family: "MuseoSansCyrl300";
+					display: inline-block;
+					line-height: 26px;
+					span{
+						font-family: "MuseoSansCyrl500";
+					}
+					.dd-blue{
+						color:#fff;
+						width: 81px;
+						height: 34px;
+						background: url(../img/blue.png) no-repeat top center;	 
+					}
+				}
+			}
+			.dd-button-span2{
+				width: 335px;
+				padding-bottom: 14px;
+			}
+		}
+	}
+}
+.dd-prep-wrap2{
+	max-width:815px;
+	margin: 36px auto;
+	.dd-prep2{
+		padding-left: 28px;
+	}
+}
+
+.dd-t{
+	text-align:center;
+	padding-bottom: 38px;
+	padding-top: 37px;
+	span{
+		font-family: "lato-heavy";
+		font-size: 28px;
+		color: #383838;
+	}
+}
+.dd-float{
+	float:left;
+}
+.dd-width{
+	padding: 40px 10px !important;
+	width: 290px;
+}
+.min-width{
+	max-width:348px;
+	margin: 0 auto;
+}
+.dd-big-border{
+	padding-left: 5px;
+	outline:1px solid #F3F3F3;
+	// margin-bottom: 90px;
+}
+.dd-prep2-wrap{
+	display:table;
+	// outline:1px solid red;
+	// border:1px solid #F3F3F3;
+	.dd-pepod2{
+		display: table-cell;
+		vertical-align: top;
+		.dd-prep-txt{
+			max-width: 388px;
+			padding: 40px 25px;
+			display: none;
+			ul{
+				height: 355px;
+				li{
+					margin-bottom: 24px;
+					span{
+						background:url(../img/dd-galka.png) no-repeat top left;	
+						display: inline-block;	
+						font-family: "MuseoSansCyrl300";
+						color: #4c4c4c;
+						font-size: 18px;
+						padding-left: 35px;
+					}
+				}
+			}
+		}
+	}
+	.dd-pepod3{
+		padding-left: 6px;
+	}
+}
+
 @media only screen and (min-width : 320px) {
 
 }
@@ -496,7 +648,21 @@ a:hover{
 }
 
 @media only screen and (min-width : 992px) {
-	
+
+	.dd-prep-title{
+		span{
+			font-size:34px; 
+		}
+	}
+
+	.dd-prep-wrap{
+		.dd-prep{
+			.dd-prep-txt{
+				display: block;
+			}
+		}
+	}
+
 	.dd-header-wrap{
 		height: 860px;
 		.dd-menu-wrap{
@@ -556,6 +722,35 @@ a:hover{
 }
 
 @media only screen and (min-width : 1248px) {
+	.dd-big-border{
+		margin-bottom: 90px;
+	}
+	.dd-prep2-wrap{
+		display:unset;
+		.dd-pepod2{
+			margin-top: -11px;
+			display: unset;
+			float: left;
+			vertical-align: top;
+			.dd-prep-txt{
+				max-width: 388px;
+				padding: 40px 25px;
+				display: block;
+				ul{
+					height: 355px;
+				}
+			}
+		}
+		.big-w{
+			width: 284px;
+		}
+		.big-w2{
+			width: 291px;
+		}
+		.dd-pepod3{
+			padding-left: 0px;
+		}
+	}
 }
 
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
