--- a/css/style2.scss
+++ b/css/style2.scss
@@ -68,7 +68,7 @@
 
 .db-how-result{
 	text-align:center;
-	padding:35px 0;
+	padding:30px 0;
 	.db-h-result{
 		font-family: "lato-heavy";
 		font-size: 22px;
@@ -327,7 +327,7 @@ font-family: "lato-heavy";
 	.db-how-result{
 		padding-bottom: 18px;
 	text-align:center;
-	padding:23px 0;
+	padding:50px 0 !important;
 
 	.db-h-result{
 		font-family: "lato-heavy";
