--- a/css/style4.scss
+++ b/css/style4.scss
@@ -126,10 +126,10 @@ a:hover{
 		.dd-text{
 			float: left;
 			text-align:center;
-			padding-left: 50px;
+			padding-left: 30px;
 			span{
 				font-size: 23px;
-				font-family: "MyriadPro-Regular";
+				  font-family: "MuseoSansCyrl300";
 				font-weight: 400;
 				color:#fff;
 				line-height: 49px;
@@ -146,7 +146,7 @@ a:hover{
 			a{
 				display: inline-block;
 				margin-top: 10px;
-				padding: 10px 40px;
+				padding: 7px 40px;
 				border: 2px solid #fde841;
 				border-radius: 7px;
 				color: #fde841;
@@ -183,6 +183,7 @@ a:hover{
 		}
 		.dd-slogan{
 			text-align: center;
+			padding-top: 10px;	
 			span{
 				font-family: "MuseoSansCyrl1";
 				color:#fff;
@@ -232,12 +233,12 @@ a:hover{
 		.dd-form{
 			display: none;
 			position:absolute;
-			right: -213px;
-			top: 245px;
+			right: -232px;
+			top: 263px;
 			border-radius: 10px;
 			background: rgba(#000000, 0.3);
 			width: 349px;
-			padding: 20px 30px;
+			padding: 20px 30px 0px;
 			.dd-tit{
 				text-align: center;
 				padding-bottom: 10px;
@@ -252,6 +253,7 @@ a:hover{
 				text-align: center;
 				padding-bottom: 10px;
 				span{
+					
 					font-size: 19px;
 					color:#fff;
 					font-family: "MuseoSansCyrl300";
@@ -262,7 +264,7 @@ a:hover{
 			}
 			input{
 				padding-left: 20px;
-				height: 40px;
+				height: 46px;
 				width: 100%;
 				background-color: white;
 				border: 3px solid #29243E;
@@ -270,6 +272,9 @@ a:hover{
 				color: #686868;
 				font-family: "MuseoSansCyrl1";
 				margin-bottom: 15px;
+			}
+			.dd-p{
+				margin-top: 17px;
 			}
 			.dd-sub{
 				padding-left: 0px !important;
@@ -670,12 +675,11 @@ a:hover{
 		}
 		.dd-header-bottom{
 			display: block;
-
 		}
 		.dd-header-content{
 			width: 707px;
 			margin: 0 auto;
-			padding-top: 74px;
+			padding-top: 67px;
 			.dd-title{
 				span{
 					font-size: 47px;
@@ -693,12 +697,12 @@ a:hover{
 				}
 			}
 			.dd-spisok{
-				padding-left: 18px;
-				padding-top: 85px;
+				padding-left: 55px;
+				padding-top: 113px;
 				ul{
 					li{
 						font-size: 22px;
-						padding-bottom: 20px;
+						padding-bottom: 29px;
 						span{
 							padding-left: 35px;
 						}
