--- a/css/style3.scss
+++ b/css/style3.scss
@@ -35,7 +35,7 @@
 	font-weight: 800;
 	text-transform: uppercase;
 
-	font-size: 34px;
+	font-size: 24px;
     font-weight: 800;
     line-height: 16px;    
 }
@@ -229,8 +229,7 @@ td {
 }
 
 #dc-course_price {
-	padding: 50px 0 50px 0;
-	padding-bottom: 50px;
+	padding: 0 0px 0 0px 0;
 }
 
 .borderless td, .borderless th {
