--- a/css/style3.scss
+++ b/css/style3.scss
@@ -611,6 +611,7 @@ td {
 	#dc-price-tables {
 		background-image: url("../img/dc-table-background.jpg");
         background-repeat: no-repeat;
+        height: 1300px;
 	}
 
 	#dc-course_price {
