--- a/css/style4.scss
+++ b/css/style4.scss
@@ -234,7 +234,7 @@ a:hover{
 			display: none;
 			position:absolute;
 			right: -232px;
-			top: 263px;
+			top: 230px;
 			border-radius: 10px;
 			background: rgba(#000000, 0.3);
 			width: 349px;
@@ -610,6 +610,70 @@ a:hover{
 	.dd-pepod3{
 		padding-left: 6px;
 	}
+}
+
+/* Поп апы
+===============================*/
+
+#mask { position:absolute; left:0; top:0; z-index:9000; background-color:#000; width: 100%; height: 100%; display:none; }
+
+.window{ 
+	display: none;
+	position:absolute;
+	left:0;  
+	top:0;
+    display:none;
+    z-index:9998; 
+    border:none;
+    .form-wrap-main{
+        border:1px solid #FDE841;
+        background: rgba(#000000, 0.3);
+        border-radius:10px;
+        padding: 20px;
+        text-align: center;
+        .form-title, .dd-form-txt{
+			color:#fff;
+			font-family: "MuseoSansCyrl500";
+			font-size: 20px;
+        }
+        .dd-input-wrap{
+			.my-input{
+				text-align: center;
+				height: 30px;
+				width: 100%;
+				padding-left: 10px;
+				border:none;
+				border-radius:7px;
+				font-family: "MuseoSansCyrl300";
+				margin-bottom: 20px;
+			}
+        }
+        .sub{
+			background: #FDE841;
+			font-family: "MuseoSansCyrl500";
+			font-weight: bold;
+			text-transform: uppercase;
+			border-radius:7px;
+			border:none;
+			padding: 10px 20px;
+        }
+    }
+    .dd-close{
+    	width: 30px;
+    	height: 30px;
+    	color:#FDE841;
+    	// background: red;
+    	// background:url(../img/kres.png) #98BE28 no-repeat center;
+    	position:absolute;
+    	top:2px;
+    	right:-3px;
+    	cursor: pointer;
+    	transition: 0.5s;
+    	border-radius:10px;
+    }
+    .dd-close:hover{
+    	// background:url(../img/kres.png) #5F7C0B no-repeat center;
+    }
 }
 
 @media only screen and (min-width : 320px) {
