--- a/css/style4.scss
+++ b/css/style4.scss
@@ -501,6 +501,7 @@ a:hover{
 			display: none;
 			ul{
 				height: 355px;
+				margin-bottom: 36px;
 				li{
 					margin-bottom: 24px;
 					span{
