--- a/css/style4.scss
+++ b/css/style4.scss
@@ -644,11 +644,11 @@ a:hover{
         .dd-input-wrap{
 			.my-input{
 				text-align: center;
-				height: 30px;
+				height: 46px;
 				width: 100%;
 				padding-left: 10px;
-				border:none;
-				border-radius:7px;
+				border:3px solid #29243e;
+				border-radius:15px;
 				font-family: "MuseoSansCyrl300";
 				margin-bottom: 20px;
 			}
