--- a/css/style.scss
+++ b/css/style.scss
@@ -176,7 +176,7 @@ h2{
 		font-size: 34px !important;
 	}
 	.testimonials{
-		padding: 70px 0px;
+		//padding: 70px 0px;
 	}
 	.testimonials__slider{
 		position: relative;
