--- a/css/style3.scss
+++ b/css/style3.scss
@@ -267,6 +267,10 @@ td {
 	padding: 0 10px;
 }
 
+.dc-button {
+	border: none;
+}
+
 .dc-input {
 	background-color: #dff1fe;
 	font-family: "MuseoSansCyrl1";
