--- a/css/style3.scss
+++ b/css/style3.scss
@@ -625,6 +625,7 @@ td {
         height: 291px;
         width: 100%;
         background-size: cover;
+        margin-top: 83px;
     }
 
     .dc-questions {
