--- a/css/style5.scss
+++ b/css/style5.scss
@@ -175,7 +175,12 @@
 
 
 
-
+.df-bg-dating{
+	background-image: url("../img/df-bg-our-dating.png");
+	background-repeat: no-repeat;
+	outline: 5px solid red;
+	background-position: top 150px center;
+}
 .df-dating{
 	padding: 25px 0;
 	text-align: center;
