--- a/css/style4.scss
+++ b/css/style4.scss
@@ -769,7 +769,7 @@ a:hover{
 
 @media only screen and (min-width : 1248px) {
 	.dd-header-wrap{
-		height: 860px;
+		height: 890px;
 		.dd-menu-wrap{
 			// height: 65px;
 		}
@@ -777,7 +777,7 @@ a:hover{
 			display: block;
 		}
 		.dd-header-content{
-			width: 707px;
+			width: 755px;
 			margin: 0 auto;
 			padding-top: 67px;
 			.dd-title{
@@ -827,9 +827,10 @@ a:hover{
 		margin-bottom: 90px;
 	}
 	.dd-prep2-wrap{
+		padding-top: 16px;
 		display:unset;
 		.dd-pepod2{
-			margin-top: -11px;
+			// margin-top: -11px;
 			display: unset;
 			float: left;
 			vertical-align: top;
